[gd_scene load_steps=8 format=3 uid="uid://336dc0v538du"]

[ext_resource type="Script" path="res://scenes/UI/ComboTracker.gd" id="1_84hw4"]
[ext_resource type="Texture2D" uid="uid://bs1qnekyj25xh" path="res://assets/UI/ComboTracker/ComboTracker_Under.png" id="1_w2ejx"]
[ext_resource type="Texture2D" uid="uid://cqahqe74e4a6k" path="res://assets/UI/ComboTracker/ComboTracker_Over.png" id="2_y36q7"]
[ext_resource type="Texture2D" uid="uid://b0g3047x6foor" path="res://assets/UI/ComboTracker/ComboTracker_Progress.png" id="3_5ampj"]
[ext_resource type="Theme" uid="uid://dukjwrto3xgb0" path="res://resources/fonts/font_theme.tres" id="5_l7o41"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_17gnn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1wpj5"]

[node name="ComboTracker" type="Panel"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 1608.0
offset_bottom = 304.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_17gnn")
script = ExtResource("1_84hw4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 307.0
offset_bottom = 304.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_1wpj5")

[node name="ComboProgressBar" type="TextureProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1000.0
step = 0.1
fill_mode = 4
texture_under = ExtResource("1_w2ejx")
texture_over = ExtResource("2_y36q7")
texture_progress = ExtResource("3_5ampj")

[node name="ComboLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -47.5
offset_right = 46.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_l7o41")
text = "Ã—1"

[node name="FocusTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="FocusTimer" to="." method="_on_focus_timer_timeout"]
